# Deimos

./: .gitignore  README.md  build.dependencies.gradle  build.gradle
.github/workflows/: codeql.yml
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: CapsViewer.java  ConceptAprilTagEasy.java  Constants.java  Deimos.java  TestSuite.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/autonomous/: Autonomous.java  LeftBlueAuto.java  LeftDummy.java  LeftRedAuto.java  RightBlueAuto.java  RightDummy.java  RightRedAuto.java  RobotDisplay.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/drives/: ArcadeDrive.java  Drivetrain.java  MecanumDrive.java  NewSwerveDrive.java  SwerveDrive.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/sensors/: ColorSensor.java  DistanceSensor.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/systems/: Arm.java  CascadeArm.java  DroneLauncher.java  Hand.java  RailRocket.java  Shoulder.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/vision/: Camera.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/vision/pipeline/: AprilTagPipeline.java  CVPipeline.java  Pipeline.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/wrappers/: HexMotor.java  IMU.java  PIDController.java
TeamCode/src/main/python/: data.json  pid_learning.py  pyproject.toml
TeamCode/src/main/python/src/: activation_functions.py  cell.py  network.py
